# 2048

./: Cargo.toml
cli-2048/: Cargo.toml
cli-2048/src/: main.rs
discord-2048/: Cargo.toml  cmds.json
discord-2048/src/: main.rs
lib-2048/: Cargo.toml
lib-2048/src/: lib.rs
