[package]
name = "discord-2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ed25519-dalek = "1.0.1"
futures = "0.3.24"
hex = "0.4.3"
hyper = { version = "0.14.20", features = ["server", "tcp", "http1", "http2"] }
lib-2048 = { path = "../lib-2048" }
once_cell = "1.15.0"
serde = "1.0.145"
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
twilight-model = "0.13.4"
